--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
 Test for git. on 16/10/2016  by Xuguo
 Git is a distributed version control system.
 Git is free software distributed under the GPL.
+Git has a mutable index called stage.
