--- a/readme
+++ b/readme
@@ -2,4 +2,4 @@ Test for git. on 16/10/2016  by Xuguo
 Git is a distributed version control system.
 Git is free software distributed under the GPL.
 Git has a mutable index called stage.
-Git tracks changes.
+Git tracks changes of files.
